# bSuite

./: .gitignore  README.md  publisher.py
python/bSuite/: pyproject.toml
python/bSuite/bSuite_auth/: pyproject.toml
python/bSuite/bSuite_auth/src/bSuite/auth/: client.py
python/bSuite/bSuite_database/: pyproject.toml
python/bSuite/bSuite_database/src/bSuite/database/: base.py  mapped.py
python/bSuite/bSuite_misc/: pyproject.toml
python/bSuite/bSuite_misc/src/bSuite/misc/: __init__.py  strings.py
python/bSuite/bSuite_spotify/: pyproject.toml
python/bSuite/bSuite_utils/: pyproject.toml
python/bSuite/bSuite_utils/src/bSuite/utils/: __init__.py
