[project]
name='bSuite-misc'
version='0.0.1'

description='misc utils submodule of bSuite'

authors = [{name = "John Birdwell", email = "j.c.birdwell@gmail.com"}]

license = {file = "LICENSE"}
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
